@startuml

class User {
  username: String
  email: String
}

class Project {
  id: ObjectId
  owner: User
  name: String
  visibility = 'public' | 'private'
}


class ModelicaFile {
  relativePath: Path
  content: Text
}

class Session {
  id: UUID
  project: Project
  mopeId: Int
}

Project "1"--"*" ModelicaFile : has >
User "1"--"*" Project : owns >

@enduml
